GNOME Bugzilla – Bug 686774
gst-plugins-bad/curl: add a comment describing function...
Last modified: 2012-10-24 10:32:20 UTC
This is the only remaining patch which has, for no apparent reason, not made it upstream yet. It's basically a trivial patch adding a comment for gst_curl_smtp_sink_set_transfer_options_unlocked().
Created attachment 227127 [details] [review] Patch adding comment.
commit 1c71fd351ab039a18c4eb5eea54dc4769f1445a9 Author: Sebastian Rasmussen <sebrn@axis.com> Date: Wed Oct 24 11:34:32 2012 +0200 curlsmtpsink: add comment describing function Fixes https://bugzilla.gnome.org/show_bug.cgi?id=686774