curlsmtpsink: add comment describing function

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=686774